# cc-boilerplate

./: .boilerplate-ignore  .boilerplate-version  .env.sample  .gitignore  .markdownlint.json  .mcp.json.sample  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES_v1.7.0.md  pyproject.toml  setup.sh
.claude/: settings.json
.serena/: project.yml
PRPs/: PRP-001-documentation-migration.md  README.md  json-structured-output-style.md  prd-cc-boilerplate-strategic-accelerator.md  prp-002-github-maintenance-check.md  prp-003-boilerplate-synchronization.md  prp-004-agent-system-redesign.md  prp-005-spec-kit-integration.md  prp-006-universal-agent-self-review-pattern.md  prp-discovery-workflow-automation-prd.md
boilerplate/: .boilerplate-manifest.json  .env.sample  CLAUDE.template.md  setup.sh
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  DEVELOPMENT.md  GETTING_STARTED.md  REFERENCE.md  SECURITY.md  SYNCHRONIZATION.md  TROUBLESHOOTING.md  TTS_SYSTEM.md  phase1-agent-system-evolution.md  troubleshooting.md
scripts/: build-config.sh  check_prp_status.py  generate-specs-from-prp.sh  init-boilerplate.sh  prp-to-speckit.sh  run_tests.sh  safety_logic.py  sync-to-boilerplate.sh  test_prp_system.py  update-boilerplate.sh  update-spec-kit.sh  validate_prp.py
tests/: README.md  golden_dataset.py  integration_test_simple.py  run_agent_tests.py  run_all_tests.py  test_agent_system_core.py  test_agent_system_critical_gaps.py  test_base.py  test_base_broken.py  test_ci_integration.py  test_consumer_integration.py  test_hook_integration.py  (+9 more)
(+419 files in other folders)
